# iron_cropper

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GALLERY_OPTIONS.md  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PR_NOTES_PHASE4.md  README.md  TODO.md  gui_overhaul_todo.md  out.json  out_test.txt  temp_script.py  test_640.json  test_output.txt
.cargo/: config.toml
.claude/: settings.json  settings.local.json
config/: gui_settings.json
docs/: ONNX_RUNTIME_OPTIONS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  cli_recipes.md  gpu_research.md  gui_crop_guide.md  parity_report.md  release_notes_template.md  release_runbook.md
fcs-cli/: Cargo.toml  build.rs
fcs-cli/src/: annotate.rs  args.rs  benchmark.rs  color.rs  config.rs  detector.rs  enhancement.rs  gpu.rs  input.rs  main.rs  output_path.rs  quality.rs  types.rs  webcam.rs
fcs-cli/tests/: cli_integration.rs  detect_cli.rs  naming_template.rs  positioning_modes.rs  save_crop.rs  skip_low_quality.rs
fcs-cli/tests/common/: mod.rs
fcs-core/: Cargo.toml
fcs-core/benches/: conv2d_benchmark.rs  crop_enhance.rs  inference_pipeline.rs  preprocessing.rs
fcs-core/examples/: benchmark_model_load.rs  inspect_node.rs  parity_report.rs  profile_pipeline.rs
fcs-core/src/: cropper.rs  detector.rs  face_cropper.rs  lib.rs  model.rs  model_config.rs  nms.rs  postprocess.rs  preprocess.rs  presets.rs
fcs-core/src/gpu/: activation.rs  add.rs  batch_norm.rs  conv2d.rs  conv2d.wgsl  graph.rs  max_pool.rs  ops.rs  runtime.rs  tensor.rs  tests.rs  upsample2x.rs
fcs-core/tests/: full_crop_workflow.rs  golden_crop_regions.rs  gpu_cpu_parity.rs  parity.rs
fcs-gui/: Cargo.toml  build.rs
fcs-gui/src/: app.rs  app_impl.rs  lib.rs  main.rs  theme.rs  types.rs
fcs-gui/src/core/: cache.rs  compositing.rs  detection.rs  export.rs  quality.rs  settings.rs  webcam.rs
fcs-gui/src/interaction/: bbox_drag.rs  coords.rs  drawing.rs  shortcuts.rs
fcs-gui/src/rendering/: paint.rs
fcs-gui/src/ui/: batch_window.rs  canvas.rs  inspector.rs  mapping.rs  menubar.rs  mod.rs  settings_window.rs  shape.rs  sidebar.rs  statusbar.rs  titlebar.rs  toolbar.rs  widgets.rs
fcs-gui/src/ui/config/: detections.rs  enhancement.rs
fcs-gui/src/ui/config/crop/: dimensions.rs  fill.rs  metadata.rs  presets.rs  quality.rs  shape.rs
fcs-gui/tests/: app_state.rs  event_handlers.rs  lru_behavior.rs  mapping_state.rs  oom_handling.rs  screenshot.rs
fcs-gui2/: Cargo.toml
fcs-utils/: Cargo.toml
fcs-utils/benches/: bitwise_optimizations.rs
fcs-utils/src/: config.rs  enhance.rs  fixtures.rs  image_utils.rs  lib.rs  macros.rs  mapping.rs  output.rs  quality.rs  shape.rs  shape_tests.rs  telemetry.rs  webcam.rs
fcs-utils/src/gpu/: bilateral_filter.rs  buffer_pool.rs  crop.wgsl  crop_batch.rs  gaussian_blur.rs  hist_equalize.rs  memory.rs  mod.rs  pixel_adjust.rs  preprocess.wgsl  red_eye.rs  shape_mask.rs
fixtures/: README.md
models/: README.md
samples/: PRESETS.md  README.md
screenshots/: README.md
scripts/: .gitignore  compare_ratios.py  generate_opencv_parity.py  inspect_onnx.py  (+1 more)
yunet-cli/: Cargo.toml  build.rs
yunet-cli/src/: annotate.rs  args.rs  benchmark.rs  color.rs  config.rs  detector.rs  enhancement.rs  gpu.rs  input.rs  main.rs  output_path.rs  quality.rs  types.rs  webcam.rs
yunet-cli/tests/: batch_quality_filtering.rs  cli_integration.rs  detect_cli.rs  enhancement_pipeline.rs  naming_template.rs  positioning_modes.rs  preset_sizes.rs  save_crop.rs  skip_low_quality.rs
yunet-cli/tests/common/: mod.rs
yunet-cli/tests/snapshots/: cli_single_image.json
yunet-core/: Cargo.toml  benchmark_results.txt
yunet-core/benches/: conv2d_benchmark.rs  crop_enhance.rs  inference_pipeline.rs  preprocessing.rs
yunet-core/examples/: benchmark_model_load.rs  inspect_node.rs  parity_report.rs  profile_pipeline.rs
yunet-core/src/: cropper.rs  detector.rs  face_cropper.rs  lib.rs  model.rs  postprocess.rs  preprocess.rs  presets.rs
yunet-core/src/gpu/: activation.rs  activation.wgsl  add.rs  add.wgsl  batch_norm.rs  batch_norm.wgsl  conv2d.rs  conv2d.wgsl  graph.rs  macros.rs  max_pool.rs  memory.rs  mod.rs  onnx.rs  ops.rs  pool.wgsl  resize2x.wgsl  runtime.rs  tensor.rs  tests.rs  upsample2x.rs
yunet-core/src/gpu/ops/: activation.rs  add.rs  batch_norm.rs  conv2d.rs  max_pool.rs  mod.rs  tests.rs  upsample2x.rs  utils.rs
yunet-core/tests/: full_crop_workflow.rs  gpu_cpu_parity.rs  parity.rs
yunet-gui/: Cargo.toml  build.rs  test_settings.json
yunet-gui/src/: app.rs  app_impl.rs  lib.rs  main.rs  theme.rs  types.rs
yunet-gui/src/core/: cache.rs  compositing.rs  detection.rs  export.rs  mod.rs  quality.rs  settings.rs  webcam.rs
yunet-gui/src/interaction/: bbox_drag.rs  coords.rs  drawing.rs  mod.rs
yunet-gui/src/rendering/: paint.rs
yunet-gui/src/ui/: batch_window.rs  icons.rs  mapping.rs  mod.rs  navigation.rs  preview.rs  settings_window.rs  status_bar.rs  widgets.rs
yunet-gui/src/ui/config/: crop.rs  detections.rs  enhancement.rs  mod.rs  panel.rs
yunet-gui/src/ui/config/crop/: dimensions.rs  fill.rs  metadata.rs  mod.rs  output.rs  positioning.rs  presets.rs  quality.rs  shape.rs
yunet-gui/tests/: app_state.rs  event_handlers.rs  lru_behavior.rs  mapping_state.rs  oom_handling.rs  screenshot.rs
yunet-gui/tests/snapshots/: gui_preview_045.sha256
yunet-utils/: Cargo.toml
yunet-utils/benches/: bitwise_optimizations.rs
yunet-utils/src/: color.rs  config.rs  enhance.rs  fixtures.rs  image_utils.rs  lib.rs  macros.rs  mapping.rs  output.rs  point.rs  quality.rs  shape.rs  shape_tests.rs  telemetry.rs  webcam.rs
yunet-utils/src/gpu/: background_blur.rs  background_blur.wgsl  bilateral_filter.rs  bilateral_filter.wgsl  buffer_pool.rs  crop.wgsl  crop_batch.rs  gaussian_blur.rs  gaussian_blur.wgsl  hist_equalize.rs  hist_equalize.wgsl  memory.rs  mod.rs  pixel_adjust.rs  pixel_adjust.wgsl  red_eye.rs  red_eye.wgsl  shape_mask.rs  shape_mask.wgsl
(+34 files in other folders)
