[workspace]
members = [
    "yunet-core",
    "yunet-utils",
    "yunet-cli",
    "yunet-gui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.6.0"
description = "Pure Rust YuNet face detection workspace."

[workspace.dependencies]
anyhow = "1.0.100"
calamine = "0.31.0"
clap = { version = "4.5.51", features = ["derive"] }
criterion = "0.7.0"
csv = "1.3.0"
egui = "0.33.0"
egui_extras = "0.33.0"
eframe = "0.33.0"
env_logger = "0.11.8"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp"] }
log = "0.4.28"
ndarray = { version = "0.17.1", features = ["rayon"] }
parquet = { version = "57.0.0", default-features = false, features = ["arrow", "flate2", "flate2-zlib-rs", "lz4", "snap", "zstd"] }
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tract-onnx = "0.22.0"
imageproc = "0.25.0"
tempfile = "3.23.0"
base64 = "0.22.1"
crc32fast = "1.5.0"
wide = "0.8.2"
ico = "0.4.0"
tiny-skia = "0.11.4"
fast_image_resize = "5.3.0"
wgpu = "27.0.1"
pollster = "0.4.0"
async-channel = "2.5.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
