[workspace]
members = ["yunet-core", "yunet-utils", "yunet-cli", "yunet-gui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.9.10"
description = "Pure Rust YuNet face detection workspace."

[workspace.dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
async-channel = "2.5.0"
base64 = "0.22.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
calamine = "0.32.0"
clap = { version = "4.5.53", features = ["derive"] }
crc32fast = "1.5.0"
criterion = "0.8.1"
csv = "1.4.0"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui_extras = "0.33.3"
env_logger = "0.11.8"
fast_image_resize = "5.4.0"
ico = "0.5.0"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "rayon", # Enable parallel processing support
] }
imageproc = "0.25.0"
log = "0.4.29"
ndarray = { version = "0.17.1", features = ["rayon"] }
nokhwa = { version = "0.10.10", features = ["input-native"] }
parquet = { version = "57.1.0", default-features = false, features = [
    "arrow",
    "flate2",
    "flate2-zlib-rs",
    "lz4",
    "snap",
    "zstd",
] }
pollster = "0.4.0"
prost = "0.11.9" # Set to 0.11.9 for tract-onnx compatibility
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tiny-skia = "0.11.4"
tract-onnx = "0.22.0"
wgpu = "27.0.1"
wide = "1.1.0"
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
metal = "0.32.0"
