[package]
name = "fcs-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Face Crop Studio CLI — batch face detection and cropping."

[dependencies]
anyhow.workspace = true
clap.workspace = true
fcs-core.workspace = true
fcs-utils = { workspace = true, features = ["mapping", "webcam"] }
image.workspace = true
imageproc.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[build-dependencies]
winresource.workspace = true
