[package]
name = "fcs-gui"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Face Crop Studio — egui desktop application for face detection and cropping."

[lib]
path = "src/lib.rs"

[[bin]]
name = "fcs-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras = { workspace = true, features = ["svg"] }
image.workspace = true
ico.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd = "0.17.2"
fcs-core = { path = "../fcs-core" }
fcs-utils = { path = "../fcs-utils", features = ["mapping", "webcam"] }
tempfile.workspace = true
arboard.workspace = true
lru = "0.16.3"

[dev-dependencies]
tempfile.workspace = true
imageproc.workspace = true
sha2 = "0.11.0"

[build-dependencies]
winresource = "0.1.31"
