[package]
name = "fcs-gui2"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Face Crop Studio — redesigned egui desktop application."

[lib]
path = "src/lib.rs"

[[bin]]
name = "fcs-gui2"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras = { workspace = true, features = ["svg"] }
fcs-core.workspace = true
fcs-utils = { workspace = true, features = ["mapping"] }
image.workspace = true
ico.workspace = true
log.workspace = true
lru.workspace = true
rayon.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
imageproc.workspace = true
sha2.workspace = true

[build-dependencies]
winresource.workspace = true
