[package]
name = "fcs-utils"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Shared utilities for the Face Crop Studio workspace."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
crc32fast.workspace = true
wide.workspace = true
tiny-skia.workspace = true
ravif = "0.13.0"
rgb = "0.8.53"
imgref = "1.12.0"
fast_image_resize.workspace = true
wgpu.workspace = true
pollster.workspace = true
async-channel.workspace = true
thiserror.workspace = true
bytemuck.workspace = true

[dependencies.csv]
workspace = true
optional = true

[dependencies.calamine]
workspace = true
optional = true

[dependencies.parquet]
workspace = true
optional = true

[dependencies.rusqlite]
workspace = true
optional = true

[dependencies.nokhwa]
workspace = true
optional = true

[features]
mapping = ["dep:csv", "dep:calamine", "dep:parquet", "dep:rusqlite"]
webcam = ["dep:nokhwa"]

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "bitwise_optimizations"
harness = false

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal.workspace = true
