[package]
name = "yunet-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Command-line interface for YuNet face detection."

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir = "2"
imageproc.workspace = true
yunet-core = { path = "../yunet-core" }
yunet-utils = { path = "../yunet-utils" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
