[package]
name = "yunet-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Command-line interface for YuNet face detection."

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir = "2.5.0"
imageproc.workspace = true
yunet-core = { path = "../yunet-core" }
yunet-utils = { path = "../yunet-utils" }

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile.workspace = true
predicates = "3.1.3"
yunet-core = { path = "../yunet-core" }
yunet-utils = { path = "../yunet-utils" }

[build-dependencies]
winresource = "0.1.27"
