[package]
name = "yunet-core"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "YuNet model loading, preprocessing, and postprocessing."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
image.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
tract-onnx.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
yunet-utils = { path = "../yunet-utils" }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "preprocessing"
harness = false

[[bench]]
name = "inference_pipeline"
harness = false

[[bench]]
name = "crop_enhance"
harness = false
