[package]
name = "yunet-gui"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "egui desktop app for YuNet face detection."

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
image.workspace = true
ico.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
rfd = "0.15.4"
yunet-core = { path = "../yunet-core" }
yunet-utils = { path = "../yunet-utils" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
imageproc.workspace = true
sha2 = "0.10.9"
