[package]
name = "yunet-gui"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "egui desktop app for YuNet face detection."

[lib]
path = "src/lib.rs"

[[bin]]
name = "yunet-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras = { workspace = true, features = ["svg"] }
image.workspace = true
ico.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd = "0.17.2"
yunet-core = { path = "../yunet-core" }
yunet-utils = { path = "../yunet-utils" }
tempfile.workspace = true
arboard.workspace = true
lru = "0.16.3"

[dev-dependencies]
tempfile.workspace = true
imageproc.workspace = true
sha2 = "0.10.9"

[build-dependencies]
winresource = "0.1.27"
