[package]
name = "yunet-utils"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Shared utilities for YuNet workspace."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
crc32fast.workspace = true
wide.workspace = true
tiny-skia.workspace = true
csv.workspace = true
calamine.workspace = true
parquet.workspace = true
rusqlite.workspace = true
fast_image_resize.workspace = true
wgpu.workspace = true
pollster.workspace = true
async-channel.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
nokhwa.workspace = true

[dev-dependencies]
tempfile.workspace = true
